updated the code

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -23,7 +23,7 @@
           <a class="navOptions" href="">Our stories</a>
           <a class="navOptions" href="">News and events</a>
         </div>
-        <a class="donatebutton">Donate Today</a>
+        <a class="donatebutton" href="./donate.html">Donate Today</a>
       </div>
     </nav>
     <main>
