add dots in the scroll section

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -323,6 +323,12 @@
             <a href="">Read more</a>
           </div>
         </div>
+        <div class="dots-container">
+          <span class="dot-1"></span>
+          <span class="dot-2"></span>
+          <span class="dot-2"></span>
+          <span class="dot-2"></span>
+        </div>
       </div>
       <div class="subscribeSection">
         <form class="subscribeForm" method="post">
