corrected some mistakes in the project

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/hdt7flo.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <title>About</title>
-  </head>
-  <body>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet"
+      />
+    <title>AboutUs</title>
+</head>
+<body>
     <nav>
-      <div class="navbar">
-        <h1 class="logo">
-          The Green <br />
-          Trees Initiative
-        </h1>
-        <div class="navigation">
-          <a class="navOptions" href="./index.html">Home</a>
-          <a class="navOptions" href="">Our stories</a>
-          <a class="navOptions" href="">News and events</a>
+        <div class="navbar">
+          <h1 class="logo">
+            The Green <br />
+            Trees Initiative
+          </h1>
+          <div class="navigation">
+            <a class="navOptions" href="./index.html">Home</a>
+            <a class="navOptions" href="">Our stories</a>
+            <a class="navOptions" href="">News and events</a>
+          </div>
         </div>
-        <a class="donatebutton" href="./donate.html">Donate Today</a>
-      </div>
+      <div class= "donatebtnflex">
+          <a class="donatebutton" href="./donate.html">Donate Today</a>
+    </div>  
     </nav>
-    <main>
-      <div class="IssueSection" id="IssueSection-About">
-        <h3 class="slogan" id="slogan-About">
+    <div class="IssueSectionabout">
+      <div class="issueflexabout">
+        <h3 class="sloganabout">
           #stop <br />climate <br />
           change
         </h3>
-        <div class="issuestatement" id="issuestatement-About">
+        <div class="issuestatement">
           <span class="issuehead">THE ISSUE</span>
-          <p class="statement" id="statement-About">
-            We are an environmental organization that empowers communities,
-            particularly women, to conserve the environment and improve
-            livelihoods.
+          <p class="statement">
+            We are an environmental
+organization that empowers
+communities, particularly
+women, to conserve the
+environment.
           </p>
         </div>
+        </div>
       </div>
-      <div class="missionAndValuesSection">
+  <div class="mandvbg">
+  <div class="missionAndValuesSection">
         <h4 class="missionAndValueshead">MISSION & VALUES</h4>
         <p class="missionAndValuesintro">
           We strive for better environmental management, community empowerment,
@@ -58,10 +64,13 @@
             src="./Assets/Icon person@2x.png"
             alt="Icon person.png"
           />
-          Stay open-minded
+          <div class="heading">Stay open-minded
           <p class="openmindText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+           Lorem ipsum dolor sit
+amet, consectetur
+adipiscing elit. Proin
           </p>
+            </div>
         </div>
         <div class="protect">
           <img
@@ -74,19 +83,22 @@
             src="./Assets/Icon earth@2x.png"
             alt="Icon earth.png"
           />
-          Protect the Earth
+          <div class="heading">Protect the Earth
           <p class="protectText">
-            Aliquam ullamcorper feugiat urna ut bibendum. Nulla eu
+          Aliquam ullamcorper
+feugiat urna ut
+bibendum. Nulla eu
           </p>
+            </div>
         </div>
         <div class="optimistic">
           <img class="sun1" src="./Assets/Icon sun.png" alt="Icon sun.png" />
           <img class="sun2" src="./Assets/Icon sun@2x.png" alt="Icon sun.png" />
-          Stay optimistic
+          <div class="heading">Stay optimistic
           <p class="optimisticText">
-            Ut turpis ex, elementum ac sapien ac, commodo molestie lectus. Fusce
-            et tempus nisi.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
+            </div>
         </div>
         <div class="plant">
           <img
@@ -99,11 +111,13 @@
             src="./Assets/Icon flower@2x.png "
             alt="Icon flower.png"
           />
-          Plant new seeds
+          <div class="heading">Plant new seeds
           <p class="plantText">
-            Donec a maximus ligula. Mauris consequat sapien lectus, eu aliquam
-            sem cursus.
+            Donec a maximus
+ligula. Mauris
+consequat sapien
           </p>
+            </div>
         </div>
         <div class="hand">
           <img class="hand1" src="./Assets/Icon hand.png" alt="Icon hand.png" />
@@ -112,11 +126,13 @@
             src="./Assets/Icon hand@2x.png"
             alt="Icon hand.png"
           />
-          Lend a hand
+          <div class="heading">Lend a hand
           <p class="handText">
-            Curabitur faucibus, libero vel posuere pharetra, dolor erat pharetra
-            purus, ut accumsan
+            Donec a maximus
+ligula. Mauris
+consequat sapien
           </p>
+            </div>
         </div>
         <div class="openbook">
           <img class="book1" src="./Assets/Icon book.png" alt="Icon book.png" />
@@ -125,11 +141,11 @@
             src="./Assets/Icon book@2x.png"
             alt="Icon book.png"
           />
-          Be an open book
+          <div class="heading">Be an open book
           <p class="openbookText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi
-            felis, auctor vitae vestibulum vel,
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
+            </div>
         </div>
         <div class="together">
           <img
@@ -142,11 +158,13 @@
             src="./Assets/Icon people@2x.png"
             alt="Icon people.png"
           />
-          Work together
+          <div class="heading">Work together
           <p class="togetherText">
-            Morbi eu fermentum dui. Nunc sit amet erat ut urna facilisis
-            iaculis. Vivamus efficitur.
+           Curabitur faucibus,
+libero vel posuere
+pharetra, dolor erat
           </p>
+            </div>
         </div>
         <div class="love">
           <img
@@ -159,14 +177,17 @@
             src="./Assets/Icon heart@2x.png"
             alt="Icon heart.png"
           />
-          Work from love
+          <div class="heading">Work from love
           <p class="loveText">
-            Orci varius natoque penatibus et magnis dis parturient montes,
-            nascetur ridiculus mus.
+            Curabitur faucibus,
+libero vel posuere
+pharetra, dolor erat
           </p>
+            </div>
         </div>
       </div>
-      <div class="teamSection">
+  </div>
+  <div class="teamSection">
         <h3 class="teamSectionHead">OUR TEAM</h3>
         <div class="teamSectionHeader">
             <h4 class="teamSectionSubhead">
@@ -260,82 +281,133 @@
             </div>
         </div>
       </div>
-      <div class="impactSection">
+  <div class="impactSection">
+    <div class="impactSectionflex">
         <h3 class="impactHead">OUR IMPACT</h3>
         <h4 class="impactSubHead">
           We invest in a better tomorrow for the planet and all its people.
         </h4>
-        <div class="impact1Head">50</div>
+      <div class="flexboximpact">
+      <div class="flex1">
+        <div class="impact1Head">50
         <p class="impact1Text">million trees planted in deforested areas</p>
-        <div class="impact2Head">200</div>
+          </div>
+        <div class="impact2Head">200
         <p class="impact2Text">women employed in communities</p>
-        <div class="impact3Head">25000</div>
+          </div>
+        </div>
+      <div class="flex2">
+        <div class="impact3Head">25000
         <p class="impact3Text">million trees planted in deforested areas</p>
-        <div class="impact4Head">150</div>
+          </div>
+        <div class="impact4Head">150
         <p class="impact4Text">women employed in communities</p>
+          </div>
+        </div>
+        </div>
       </div>
-      <div class="cards">
-        <h3 class="cardHead">LET’S Take action now to save the future.</h3>
-        <img
+      </div>
+  <div class="cards">
+        <div class="cardflex">
+        <div class="cardheading">
+            <h3>LET’S Take action now
+                to save the future.</h3>
+                <img
           class="cardicon"
           src="./Assets/Union 5@2x.png"
           alt="arrow-icon.png"
         />
-        <h4 class="cardyear1">2018</h4>
-        <div class="card1">
-          <img class="card1Img" src="./Assets/Image.png" alt="Image.png" />
-          <h4 class="cardsubhead">
-            Training to rural women and community-based organizations
-          </h4>
-          <p class="cardText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi
-            felis, auctor vitae vestibulum vel, consequat eu dolor.
-          </p>
-          <div class="cardButton1">
-            <a href="">Read more</a>
-          </div>
         </div>
-        <h4 class="cardyear2 cardyear1">2018</h4>
-        <div class="card2 card1">
-          <img class="card2Img card1Img" src="./Assets/Image.png" alt="Image.png" />
-          <h4 class="cardsubhead">
-            Training to rural women and community-based organizations
-          </h4>
-          <p class="cardText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi
-            felis, auctor vitae vestibulum vel, consequat eu dolor.
-          </p>
-          <div class="cardButton2 cardButton1">
-            <a href="">Read more</a>
-          </div>
+        <div class="scroll">
+            <div class="card">
+                <div class="cardyear">2018</div>
+                <img class="card1Img" src="./Assets/Image.png" alt="Image.png" />
+                <div class="cardsubhead">Training to rural
+                    women and
+                    community-based
+                    organizations</div>
+                    <div class="cardtext">
+                        Lorem ipsum dolor sit amet,
+    consectetur adipiscing elit.
+    Nullam mi felis, auctor vitae
+    vestibulum vel, consequat eu
+    dolor.
+                    </div>
+                    <div class="cardButton">
+                        <a href="">Read more</a>
+                      </div>
+            </div>
+            <div class="card">
+                <div class="cardyear">2018</div>
+                <img class="card1Img" src="./Assets/Image.png" alt="Image.png" />
+                <div class="cardsubhead">Training to rural
+                    women and
+                    community-based
+                    organizations</div>
+                    <div class="cardtext">
+                        Lorem ipsum dolor sit amet,
+    consectetur adipiscing elit.
+    Nullam mi felis, auctor vitae
+    vestibulum vel, consequat eu
+    dolor.
+                    </div>
+                    <div class="cardButton">
+                        <a href="">Read more</a>
+                      </div>
+            </div>
+            <div class="card">
+                <div class="cardyear">2018</div>
+                <img class="card1Img" src="./Assets/Image.png" alt="Image.png" />
+                <div class="cardsubhead">Training to rural
+                    women and
+                    community-based
+                    organizations</div>
+                    <div class="cardtext">
+                        Lorem ipsum dolor sit amet,
+    consectetur adipiscing elit.
+    Nullam mi felis, auctor vitae
+    vestibulum vel, consequat eu
+    dolor.
+                    </div>
+                    <div class="cardButton">
+                        <a href="">Read more</a>
+                      </div>
+            </div>
+            <div class="card">
+                <div class="cardyear">2018</div>
+                <img class="card1Img" src="./Assets/Image.png" alt="Image.png" />
+                <div class="cardsubhead">Training to rural
+                    women and
+                    community-based
+                    organizations</div>
+                    <div class="cardtext">
+                        Lorem ipsum dolor sit amet,
+    consectetur adipiscing elit.
+    Nullam mi felis, auctor vitae
+    vestibulum vel, consequat eu
+    dolor.
+                    </div>
+                    <div class="cardButton">
+                        <a href="">Read more</a>
+                      </div>
+            </div>
         </div>
-        <h4 class="cardyear3 cardyear1">2018</h4>
-        <div class="card3 card1">
-          <img class="card3Img card1Img" src="./Assets/Image.png" alt="Image.png" />
-          <h4 class="cardsubhead">
-            Training to rural women and community-based organizations
-          </h4>
-          <p class="cardText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi
-            felis, auctor vitae vestibulum vel, consequat eu dolor.
-          </p>
-          <div class="cardButton3 cardButton1">
-            <a href="">Read more</a>
-          </div>
-        </div>
-        <div class="dots-container">
-          <span class="dot-1"></span>
-          <span class="dot-2"></span>
-          <span class="dot-2"></span>
-          <span class="dot-2"></span>
-        </div>
-      </div>
-      <div class="subscribeSection">
+          <div class="dots-container">
+                <span class="dot-1"></span>
+                <span class="dot-2"></span>
+                <span class="dot-2"></span>
+                <span class="dot-2"></span>
+              </div>
+    </div>
+    </div>
+   <div class="subscribeSection">
+    <div class="subsflex">
         <form class="subscribeForm" method="post">
           <h3 class="subscribeText">
             Subscribe to our monthly newsletter and stay up to date with all news
             and events.
           </h3>
+          <div class="subsinputsection">
           <input
             class="emailForm"
             type="email"
@@ -345,16 +417,22 @@
             required
           />
           <button class="SubscribeButton" type="submit">Subscribe</button>
-        </form>
-        <footer class="footerSection">
-          <h3>The Green Trees Initiative</h3>
-          <div class="contactDetails">
-            CONTACT US <br> <hr>
-            <p class="address">
-              123 Anywhere St. <br> Cityname, NY 11206 <br> (123) 456-7890 <br>
-              contact@npo.org
-            </p>
           </div>
+        </form>
+      </div>
+  </div>
+</body>
+</html>
+<div class="footerflex">
+          <footer class="footerSection">
+            <h3>The Green Trees Initiative</h3>
+            <div class="contactDetails">
+              CONTACT US <br> <hr>
+              <p class="address">
+                123 Anywhere St. <br> Cityname, NY 11206 <br> (123) 456-7890 <br>
+                contact@npo.org
+              </p>
+            </div>
           <div class="socials">
             FOLLOW US <br> <hr>
             <a class="socialLinks" href="">Facebook</a>
@@ -371,6 +449,7 @@
           </div>
           <h2 class="footerSlogan">#stop climate change</h2>
         </footer>
-    </main>
-  </body>
+      </div>
+
+</body>
 </html>
