--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Donation</title>
   </head>
   <body>
     <header class="donation-header">
@@ -18,6 +18,7 @@
         Trees Initiative</a
       >
     </header>
+    <div class="formbg">
     <div class="formbody">
       <h1 class="background-logo">GIVE HOPE TO THOSE WHO NEED IT MOST</h1>
       <div class="container">
@@ -156,31 +157,17 @@
         </div>
       </div>
     </div>
-    <div class="subscribeSection">
-        <form class="subscribeForm" method="post">
-          <h3 class="subscribeText">
-            Subscribe to our monthly newsletter and stay up to date with all news
-            and events.
-          </h3>
-          <input
-            class="emailForm"
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Enter your email address"
-            required
-          />
-          <button class="SubscribeButton" type="submit">Subscribe</button>
-        </form>
-        <footer class="footerSection">
-          <h3>The Green Trees Initiative</h3>
-          <div class="contactDetails">
-            CONTACT US <br> <hr>
-            <p class="address">
-              123 Anywhere St. <br> Cityname, NY 11206 <br> (123) 456-7890 <br>
-              contact@npo.org
-            </p>
-          </div>
+    </div>
+    <div class="footerflex">
+          <footer class="footerSection">
+            <h3>The Green Trees Initiative</h3>
+            <div class="contactDetails">
+              CONTACT US <br> <hr>
+              <p class="address">
+                123 Anywhere St. <br> Cityname, NY 11206 <br> (123) 456-7890 <br>
+                contact@npo.org
+              </p>
+            </div>
           <div class="socials">
             FOLLOW US <br> <hr>
             <a class="socialLinks" href="">Facebook</a>
@@ -197,5 +184,10 @@
           </div>
           <h2 class="footerSlogan">#stop climate change</h2>
         </footer>
+      </div>
+
   </body>
+</html>
+
+</body>
 </html>
