--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/hdt7flo.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="https://use.typekit.net/hdt7flo.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Nonprofit XD Freebie</title>
-  </head>
-  <body>
+    <title>Non-Profit-Web-Application</title>
+</head>
+<body>
     <nav>
-      <div class="navbar">
-        <h1 class="logo">
-          The Green <br />
-          Trees Initiative
-        </h1>
-        <div class="navigation">
-          <a class="navOptions" href="./AboutUs.html">About us</a>
-          <a class="navOptions" href="./sample.html">Our stories</a>
-          <a class="navOptions" href="">News and events</a>
+        <div class="navbar">
+          <h1 class="logo">
+            The Green <br />
+            Trees Initiative
+          </h1>
+          <div class="navigation">
+            <a class="navOptions" href="./AboutUs.html">About us</a>
+            <a class="navOptions" href="">Our stories</a>
+            <a class="navOptions" href="">News and events</a>
+          </div>
         </div>
-        <a class="donatebutton" href="./donate.html">Donate Today</a>
-      </div>
+      <div class= "donatebtnflex">
+          <a class="donatebutton" href="./donate.html">Donate Today</a>
+    </div>  
     </nav>
-    <main>
-      <div class="IssueSection">
+    <div class="IssueSection">
+      <div class="issueflex">
         <h3 class="slogan">
           #stop <br />climate <br />
           change
@@ -42,10 +44,12 @@
             >Read more about this environmental and social cause</a
           >
         </div>
+        </div>
       </div>
       <div class="TakeActionSection">
-        <div class="TakeActionGrid">
+        <div class="TakeActionflex">
           <span class="actionhead">TAKE ACTION</span>
+          <div class="actionrow1">
           <div class="Learn-box">
             <h4 class="actionboxsubheading">Learn</h4>
             <p class="actionboxtext">
@@ -58,6 +62,8 @@
               Find out about upcoming events that need your help.
             </p>
           </div>
+          </div>
+          <div class="actionrow2">
           <div class="Share-box">
             <h4 class="actionboxsubheading">Share</h4>
             <p class="actionboxtext">
@@ -70,9 +76,11 @@
               Help us raise money to make a big difference with this issue.
             </p>
           </div>
+            </div>
         </div>
       </div>
-      <div class="WhatWeDoSection">
+  <div class="WhatWeDoSection">
+  <div class="WhatWeDoflex">
         <h4 class="WhatWeDohead">WHAT WE DO</h4>
         <p class="WhatWeDointro">
           Our mission is to create sustainable work for women in developing
@@ -172,7 +180,9 @@
           </div>
         </div>
     </div>
-      <div class="infoSection">
+  </div>
+  <div class="infoSection">
+  <div class="infoSectionflex">
         <div class="info-header">
             <h3 class="slogan2">
               Climate <br />
@@ -181,10 +191,12 @@
               issue.
             </h3>
             <a class="actionButton" href="n">Take action</a>
+          
         </div>
         <div class="infosectionbox">
-            <div class="first-info">
-                <h4 class="dywHead">DID YOU KNOW?</h4>
+          <h4 class="dywHead">DID YOU KNOW?</h4>  
+          <div class="first-info">
+              
               <div class="infotext">
                 <span> 3 out of 4 </span>
                 <p>People living in poverty depend on agriculture for survival.</p>
@@ -227,7 +239,9 @@
             </div>
           </div>
         </div>
-      <div class="storiesSection">
+  </div>
+  <div class="storiesSection">
+    <div class="storiesSectionflex">
         <h4 class="storieshead">STORIES</h4>
         <img
           class="storiesImg1"
@@ -251,7 +265,8 @@
         </div>
         <a class="storiesButton" href="">Read more</a>
       </div>
-      <div class="EventandNewsSection">
+  </div>
+  <div class="EventandNewsSection">
         <h3 class="slogan3">LET’S Take action now to save the future.</h3>
         <div class="eventSection">
           <img
@@ -311,13 +326,15 @@
           <a class="newsButton" href="">Read more</a>
           </div>
         </div>
-      </div> 
-      <div class="subscribeSection">
+      </div>
+  <div class="subscribeSection">
+    <div class="subsflex">
         <form class="subscribeForm" method="post">
           <h3 class="subscribeText">
             Subscribe to our monthly newsletter and stay up to date with all news
             and events.
           </h3>
+          <div class="subsinputsection">
           <input
             class="emailForm"
             type="email"
@@ -327,16 +344,22 @@
             required
           />
           <button class="SubscribeButton" type="submit">Subscribe</button>
-        </form>
-        <footer class="footerSection">
-          <h3>The Green Trees Initiative</h3>
-          <div class="contactDetails">
-            CONTACT US <br> <hr>
-            <p class="address">
-              123 Anywhere St. <br> Cityname, NY 11206 <br> (123) 456-7890 <br>
-              contact@npo.org
-            </p>
           </div>
+        </form>
+      </div>
+  </div>
+</body>
+</html>
+<div class="footerflex">
+          <footer class="footerSection">
+            <h3>The Green Trees Initiative</h3>
+            <div class="contactDetails">
+              CONTACT US <br> <hr>
+              <p class="address">
+                123 Anywhere St. <br> Cityname, NY 11206 <br> (123) 456-7890 <br>
+                contact@npo.org
+              </p>
+            </div>
           <div class="socials">
             FOLLOW US <br> <hr>
             <a class="socialLinks" href="">Facebook</a>
@@ -354,6 +377,3 @@
           <h2 class="footerSlogan">#stop climate change</h2>
         </footer>
       </div>
-    </main>
-  </body>
-</html>
